# AgentTraceDAG

./: .agenttracedag.db  .agenttracedag.db-shm  .agenttracedag.db-wal  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
agenttracedag/: __init__.py  __main__.py  models.py  server.py  sqlite_store.py
agenttracedag/interceptors/: __init__.py  anthropic_patch.py  langchain.py  openai_patch.py  smolagents_patch.py
agenttracedag/ui_dist/: index.html
agenttracedag/ui_dist/assets/: index-BsCf_qwp.js
examples/: langchain_quickstart.py
tests/: test_api.py  test_interceptors.py  test_store.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: RunList.tsx
