[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttracedag"
version = "0.1.0"
description = "Time-travel debugger for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "black", "isort", "mypy"]

[project.scripts]
agenttracedag = "agenttracedag.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["agenttracedag"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
